syntax = "proto3";

package common.yt.proto;

option java_package = "common.yt.proto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

message Recursive {
    string name = 1;
    google.protobuf.Timestamp created = 2;
    repeated Recursive children = 3;
}

message Outer {
    message Inner {
        message WeNeedToGoDeeper {
            string hello = 1;
        }
    }
}

enum Enum {
    UNKNOWN = 0;
    BAR = 1;
    BAZ = 2;
}

message SimpleMessage {
    int32 num = 1;
    string str = 2;
    bool bool = 3;
}

message Diversity {

    google.protobuf.UInt32Value wuint32 = 1;
    google.protobuf.UInt64Value wuint64 = 2;
    google.protobuf.Int32Value wint32 = 3;
    google.protobuf.Int64Value wint64 = 4;
    google.protobuf.StringValue wstring = 5;
    google.protobuf.BoolValue wbool = 6;
    google.protobuf.DoubleValue wdouble = 7;
    google.protobuf.FloatValue wfloat = 8;
    google.protobuf.BytesValue wbytes = 9;

    google.protobuf.Timestamp timestamp = 10;

    string string = 101;
    int32 int32 = 102;
    int64 int64 = 103;
    uint32 uint32 = 104;
    uint64 uint64 = 105;
    bool bool = 106;
    float float = 107;
    double double = 108;
    sfixed32 sfixed32 = 109;
    sfixed64 sfixed64 = 110;
    sint32 sint32 = 111;
    sint64 sint64 = 112;
    fixed32 fixed32 = 113;
    fixed64 fixed64 = 114;

    Enum enum = 202;
    repeated Enum list_of_enum = 203;
    map<uint64, Enum> map_of_enum = 204;

    google.protobuf.UInt32Value wrapped_int = 206;
    repeated google.protobuf.UInt32Value list_of_wrapped_int = 207;
    map<uint64, google.protobuf.UInt32Value> map_of_wrapped_int = 208;

    SimpleMessage foo = 209;
    repeated SimpleMessage list_of_foo = 210;
    map<string, SimpleMessage> map_of_foo = 211;

    string str = 212;
    repeated string list_of_string = 213;
    map<string, string> map_of_string = 214;

    google.protobuf.Timestamp ts = 215;
    repeated google.protobuf.Timestamp list_of_timestamp = 216;
    map<bool, google.protobuf.Timestamp> map_of_timestamp = 217;

    int32 int = 218;
    repeated int32 list_of_int = 219;
    map<sfixed64, int32> map_of_int = 220;
}
